# portfolio-tracker

./: .gitignore  CLAUDE.md  LICENSE  Makefile  PLANS.md  README.md  pyproject.toml  requirements.txt
.claude/skills/portfolio/: SKILL.md
.github/workflows/: ci.yml
dashboard/: index.html  package.json  vite.config.js
dashboard/src/: App.jsx  data.js  main.jsx  utils.js
dashboard/src/components/: Header.jsx  KpiGrid.jsx  KpiRow2.jsx  TabNav.jsx
dashboard/src/components/analysis/: AiAdvisor.jsx  AiStreaming.js  MarkdownRenderer.jsx
dashboard/src/components/holdings/: HoldingsTable.jsx
dashboard/src/components/overview/: DonutChart.jsx  PerformanceChart.jsx  PnlChart.jsx
dashboard/src/components/rebalancing/: DeviationChart.jsx
dashboard/src/hooks/: useMarkdownExport.js
dashboard/src/styles/: index.css
scripts/: create_demo.py  import_revolut.py  import_revolut_csv.py  import_revolut_summary.py  migrate_phase2.py  simulate_portfolios.py
src/portfolio_tracker/cli/: main.py
src/portfolio_tracker/core/: calculator.py  config.py  exceptions.py  models.py  rebalancer.py
src/portfolio_tracker/data/: database.py  query.py
src/portfolio_tracker/importers/: base.py  registry.py  revolut.py
tests/: conftest.py
tests/integration/: test_atomicity.py  test_end_to_end.py  test_repositories.py
tests/unit/: test_calculator.py  test_query.py  test_rebalancer.py
tests/unit/test_finance/: test_returns.py
tests/unit/test_tax/: test_abgeltungssteuer.py  test_freistellungsauftrag.py  test_teilfreistellung.py  test_vorabpauschale.py
(+32 files in other folders)
