[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-tracker"
version = "0.1.0"
description = "Investment portfolio tracker with rebalancing"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0",
    "yfinance>=0.2.31",
    "requests>=2.31",
]

[project.scripts]
pt = "portfolio_tracker.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"portfolio_tracker.cli.commands" = ["*.html"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[dependency-groups]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
